# interpolation_algos

./: CMakeLists.txt  install_thirdparties.sh  readme.md
data/: house2_ForKrigData.txt
include/: Matrix.h  base_exception.h  input_reader.h  interpolater.h  inverse_dist.h  kriging.h  numeric.h
include/data/: 3DData.h  BaseData.h
src/: input_reader.cpp  main.cpp
